[package]
name = "jupyter_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
csv = "1.1.6"
chrono = "0.4.22"
ssh2 = "0.9.3"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.8.8"
lazy_static = "1.4.0"
